feat: Criando nosso primeiro model

--- a/spring-example/src/main/resources/application.properties
+++ b/spring-example/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=spring-example
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
